# VELDT-getting-started

./: .gitignore  LICENSE  README.md
.github/workflows/: haskell.yml
demo/: Makefile_generic  pcf_generic.pcf
demo/blinker/: Blinker.hs  Blinker.pcf  CHANGELOG.md  Makefile  blinker.cabal  cabal.project
demo/echo/: Echo.hs  Echo.pcf  Main.hs  Makefile  cabal.project  echo.cabal
demo/uart-led/: Makefile  UartLed.hs  UartLed.pcf  cabal.project  uart-led.cabal
veldt/: CHANGELOG.md  cabal.project  veldt.cabal
veldt/Veldt/: Counter.hs  PWM.hs  Serial.hs  Uart.hs
veldt/Veldt/Ice40/: Rgb.hs  RgbDriver.hs
veldt/Veldt/PWM/: Rgb.hs
